--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -112,14 +112,10 @@ jobs:
           docker build -t $ACR_LOGIN_SERVER/order_service:latest ./backend/order_service/
           docker push $ACR_LOGIN_SERVER/order_service:latest
 
-
+      # Logout from Azure for security (runs even if image push fails)
       - name: Logout from Azure
         if: always()
-        run: az logout
+        run: az logout || true
 
-    # Logout from Azure for security (runs even if image push fails)
-      - name: Logout from Azure
-        run: az logout
-        if: always()
 
 # kick CI
