CI: make az logout non-fatal with continue-on-error

--- a/.github/workflows/backend_ci.yml
+++ b/.github/workflows/backend_ci.yml
@@ -115,7 +115,8 @@ jobs:
       # Logout from Azure for security (runs even if image push fails)
       - name: Logout from Azure
         if: always()
-        run: az logout || true
+        continue-on-error: true
+        run: az logout
 
 
 # kick CI
